--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -21,9 +21,10 @@
       */
       /* 
       MAIN COLOR: #087f5b
+      WHITE LETTERS COLOR: #e6fcf5
       DARK GREY COLOR: #343a40
       LIGHT GREY COLOR: #868e96
-      LIGHT GREEN COLOR: #e6fcf5
+      LIGHT GREEN COLOR: #c3fae8
       */
 
       * {
@@ -46,18 +47,18 @@
 
         border-radius: 8px;
         display: flex;
-        gap: 24px;
+        gap: 86px;
 
-        padding: 32px 32px 32px 86px;
+        padding: 32px 48px 32px 86px;
+
+        align-items: center;
       }
 
       img {
         height: 200px;
         border-radius: 8px;
         transform: scale(1.5);
-      }
-
-      .testimonial {
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
       }
 
       .testimonial-text {
@@ -70,10 +71,12 @@
       .testimonial-author {
         font-size: 14px;
         margin-bottom: 4px;
+        color: #c3fae8;
       }
 
       .testimonial-job {
         font-size: 12px;
+        color: #c3fae8;
       }
     </style>
   </head>
