--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -48,10 +48,10 @@
         border-radius: 8px;
         display: flex;
         gap: 86px;
-
         padding: 32px 48px 32px 86px;
 
         align-items: center;
+        position: relative;
       }
 
       img {
@@ -78,6 +78,36 @@
         font-size: 12px;
         color: #c3fae8;
       }
+
+      /* --- BUTTONS --- */
+      .btn {
+        width: 40px;
+        height: 40px;
+        border: none;
+        border-radius: 50%;
+        box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
+        position: absolute;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .btn-left {
+        top: 50%;
+        left: 0px;
+        transform: translate(-50%, -50%);
+      }
+
+      .btn-right {
+        top: 50%;
+        right: 0px;
+        transform: translate(50%, -50%);
+      }
+
+      .btn-icon {
+        width: 24px;
+        height: 24px;
+      }
     </style>
   </head>
 
@@ -95,14 +125,14 @@
         <p class="testimonial-job">Senior Product Manager at EDP Comercial</p>
       </blockquote>
 
-      <button class="btn">
+      <button class="btn btn-left">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
           stroke-width="1.5"
           stroke="currentColor"
-          class="left"
+          class="btn-icon"
         >
           <path
             stroke-linecap="round"
@@ -112,14 +142,14 @@
         </svg>
       </button>
 
-      <button class="btn">
+      <button class="btn btn-right">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
           viewBox="0 0 24 24"
           stroke-width="1.5"
           stroke="currentColor"
-          class="right"
+          class="btn-icon"
         >
           <path
             stroke-linecap="round"
