--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -87,6 +87,8 @@
         border-radius: 50%;
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
         position: absolute;
+        cursor: pointer;
+
         display: flex;
         align-items: center;
         justify-content: center;
