--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -85,6 +85,7 @@
         height: 40px;
         border: none;
         border-radius: 50%;
+        background-color: #fff;
         box-shadow: 0 12px 24px rgba(0, 0, 0, 0.25);
         position: absolute;
         cursor: pointer;
@@ -116,6 +117,29 @@
         width: 24px;
         height: 24px;
         stroke: #087f5b;
+      }
+
+      .dots {
+        display: flex;
+        gap: 12px;
+
+        position: absolute;
+        left: 50%;
+        bottom: 0;
+
+        transform: translate(-50%, 32px);
+      }
+
+      .dot {
+        width: 12px;
+        height: 12px;
+        background-color: #fff;
+        border: 2px solid #087f5b;
+        border-radius: 50%;
+      }
+
+      .dot:first-child {
+        background-color: #087f5b;
       }
     </style>
   </head>
@@ -169,10 +193,10 @@
       </button>
 
       <div class="dots">
-        <button class="dot">&nbsp;;</button>
-        <button class="dot">&nbsp;;</button>
-        <button class="dot">&nbsp;;</button>
-        <button class="dot">&nbsp;;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
+        <button class="dot">&nbsp;</button>
       </div>
     </div>
   </body>
