--- a/06-Components/02-carousel.html
+++ b/06-Components/02-carousel.html
@@ -136,6 +136,7 @@
         background-color: #fff;
         border: 2px solid #087f5b;
         border-radius: 50%;
+        cursor: pointer;
       }
 
       .dot:first-child {
