--- a/06-Components/03-table.html
+++ b/06-Components/03-table.html
@@ -55,6 +55,27 @@
           <td>60 cm</td>
           <td>220 cm</td>
         </tr>
+
+        <tr>
+          <td>Height</td>
+          <td>100 cm</td>
+          <td>110 cm</td>
+          <td>900 cm</td>
+        </tr>
+
+        <tr>
+          <td>Depth</td>
+          <td>70 cm</td>
+          <td>65 cm</td>
+          <td>80 cm</td>
+        </tr>
+
+        <tr>
+          <td>Weight</td>
+          <td>16 kg</td>
+          <td>22 kg</td>
+          <td>80 kg</td>
+        </tr>
       </table>
     </div>
   </body>
