--- a/06-Components/03-table.html
+++ b/06-Components/03-table.html
@@ -42,40 +42,44 @@
   <body>
     <div class="table">
       <table>
-        <tr>
-          <td>Chair</td>
-          <td>The Laid Back</td>
-          <td>The Worker Bee</td>
-          <td>The Chair 4/2</td>
-        </tr>
+        <thead>
+          <tr>
+            <th>Chair</th>
+            <th>The Laid Back</th>
+            <th>The Worker Bee</th>
+            <th>The Chair 4/2</th>
+          </tr>
+        </thead>
 
-        <tr>
-          <td>Width</td>
-          <td>80 cm</td>
-          <td>60 cm</td>
-          <td>220 cm</td>
-        </tr>
+        <tbody>
+          <tr>
+            <th>Width</th>
+            <td>80 cm</td>
+            <td>60 cm</td>
+            <td>220 cm</td>
+          </tr>
 
-        <tr>
-          <td>Height</td>
-          <td>100 cm</td>
-          <td>110 cm</td>
-          <td>900 cm</td>
-        </tr>
+          <tr>
+            <th>Height</th>
+            <td>100 cm</td>
+            <td>110 cm</td>
+            <td>900 cm</td>
+          </tr>
 
-        <tr>
-          <td>Depth</td>
-          <td>70 cm</td>
-          <td>65 cm</td>
-          <td>80 cm</td>
-        </tr>
+          <tr>
+            <th>Depth</th>
+            <td>70 cm</td>
+            <td>65 cm</td>
+            <td>80 cm</td>
+          </tr>
 
-        <tr>
-          <td>Weight</td>
-          <td>16 kg</td>
-          <td>22 kg</td>
-          <td>80 kg</td>
-        </tr>
+          <tr>
+            <th>Weight</th>
+            <td>16 kg</td>
+            <td>22 kg</td>
+            <td>80 kg</td>
+          </tr>
+        </tbody>
       </table>
     </div>
   </body>
