--- a/06-Components/03-table.html
+++ b/06-Components/03-table.html
@@ -36,6 +36,32 @@
         color: #343a40;
         line-height: 1;
       }
+
+      table {
+        width: 800px;
+        margin: 100px auto;
+        line-height: 1.5;
+        border-collapse: collapse;
+      }
+
+      thead th {
+        background-color: #087f5b;
+        color: #fff;
+      }
+
+      th,
+      td {
+        padding: 12px 24px;
+        text-align: left;
+      }
+
+      tbody tr:nth-child(odd) {
+        background-color: #f8f9fa;
+      }
+
+      tbody tr:nth-child(even) {
+        background-color: #e9ecef;
+      }
     </style>
   </head>
 
