--- a/06-Components/03-table.html
+++ b/06-Components/03-table.html
@@ -40,19 +40,20 @@
       table {
         width: 800px;
         margin: 100px auto;
-        line-height: 1.5;
         border-collapse: collapse;
       }
 
       thead th {
         background-color: #087f5b;
         color: #fff;
+        width: 25%;
       }
 
       th,
       td {
-        padding: 12px 24px;
+        padding: 16px 24px;
         text-align: left;
+        font-size: 18px;
       }
 
       tbody tr:nth-child(odd) {
@@ -89,7 +90,7 @@
             <th>Height</th>
             <td>100 cm</td>
             <td>110 cm</td>
-            <td>900 cm</td>
+            <td>90 cm</td>
           </tr>
 
           <tr>
