--- a/06-Components/03-table.html
+++ b/06-Components/03-table.html
@@ -45,9 +45,12 @@
         border-collapse: collapse;
       }
 
-      thead th {
+      thead tr {
         background-color: #087f5b;
         color: #fff;
+      }
+
+      thead th {
         width: 25%;
       }
 
