--- a/06-Components/04-pagination.html
+++ b/06-Components/04-pagination.html
@@ -52,6 +52,7 @@
         width: 48px;
         height: 48px;
         border: 1px solid #087f5b;
+        color: #087f5b;
         border-radius: 50%;
 
         background-color: #fff;
