--- a/06-Components/04-pagination.html
+++ b/06-Components/04-pagination.html
@@ -63,7 +63,8 @@
         height: 24px;
       }
 
-      .page-link {
+      .page-link:link,
+      .page-link:visited {
         font-size: 18px;
         width: 36px;
         height: 36px;
@@ -82,7 +83,8 @@
         color: #fff;
       }
 
-      .page-link:hover {
+      .page-link:hover,
+      .page-link:active {
         border-radius: 50%;
         background-color: #087f5b;
         color: #fff;
