--- a/06-Components/05-hero.html
+++ b/06-Components/05-hero.html
@@ -23,9 +23,20 @@
       ========================================
       */
 
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+      }
+
       html {
         font-family: Rubik, sans-serif;
         color: #444;
+      }
+
+      .container {
+        width: 1200px;
+        margin: 0 auto;
       }
 
       nav {
@@ -33,6 +44,13 @@
         font-weight: 700;
         display: flex;
         justify-content: space-between;
+
+        background-color: green;
+      }
+
+      header {
+        background-color: aquamarine;
+        height: 100vh;
       }
 
       h1 {
@@ -45,17 +63,40 @@
         line-height: 1.6;
         margin-bottom: 48px;
       }
+
+      .btn:link,
+      .btn:visited {
+        font-size: 20px;
+        font-weight: 600;
+        display: inline-block;
+        text-decoration: none;
+        background-color: #e67e22;
+        color: #fff;
+        border: none;
+        cursor: pointer;
+        border-radius: 9px;
+        padding: 16px 32px;
+      }
+
+      h2 {
+        font-size: 44px;
+        margin-bottom: 48px;
+      }
+      section {
+        padding: 96px 0;
+        background-color: #f7f7f7;
+      }
     </style>
   </head>
 
   <body>
     <header>
-      <nav>
+      <nav class="container">
         <div>LOGO</div>
         <div>NAVIGATION</div>
       </nav>
 
-      <div>
+      <div class="container">
         <h1>A healty meal delivered to your door, every single day</h1>
         <p>
           The smart 365-days-per-year food subscription that will make you eat
@@ -66,7 +107,7 @@
     </header>
 
     <section>
-      <div>
+      <div class="container">
         <h2>Some random heading</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque quas,
