--- a/06-Components/05-hero.html
+++ b/06-Components/05-hero.html
@@ -44,13 +44,25 @@
         font-weight: 700;
         display: flex;
         justify-content: space-between;
-
-        background-color: green;
       }
 
       header {
-        background-color: aquamarine;
         height: 100vh;
+        padding-top: 32px;
+        position: relative;
+      }
+
+      .header-container {
+        width: 1200px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+
+        transform: translate(-50%, -50%);
+      }
+
+      .header-container-inner {
+        width: 50%;
       }
 
       h1 {
@@ -96,13 +108,16 @@
         <div>NAVIGATION</div>
       </nav>
 
-      <div class="container">
-        <h1>A healty meal delivered to your door, every single day</h1>
-        <p>
-          The smart 365-days-per-year food subscription that will make you eat
-          healty algain. Tailored to your personal tastes and nutritional needs
-        </p>
-        <a href="#" class="btn">Start eating well</a>
+      <div class="header-container">
+        <div class="header-container-inner">
+          <h1>A healty meal delivered to your door, every single day</h1>
+          <p>
+            The smart 365-days-per-year food subscription that will make you eat
+            healty algain. Tailored to your personal tastes and nutritional
+            needs
+          </p>
+          <a href="#" class="btn">Start eating well</a>
+        </div>
       </div>
     </header>
 
