--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -12,6 +12,34 @@
         padding: 0;
         box-sizing: border-box;
       }
+
+      body {
+        font-family: sans-serif;
+        font-size: 24px;
+        color: #343a40;
+        height: 100vh;
+
+        display: grid;
+        grid-template-columns: 80px 400px 1fr 250px;
+        grid-template-rows: 80px 1fr;
+      }
+
+      nav {
+        background-color: #343a40;
+      }
+
+      menu {
+        background-color: #7048e8;
+        color: #fff;
+      }
+
+      section {
+        background-color: #e9ecef;
+      }
+
+      aside {
+        background-color: #e9ecef;
+      }
     </style>
   </head>
 
