--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -26,11 +26,13 @@
 
       nav {
         background-color: #343a40;
+        grid-row: 1 / -1;
       }
 
       menu {
         background-color: #7048e8;
         color: #fff;
+        grid-column: 2 / -1;
       }
 
       section {
