--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -19,13 +19,25 @@
         color: #343a40;
         height: 100vh;
 
+        text-align: center;
+        font-weight: bold;
+
         display: grid;
         grid-template-columns: 80px 400px 1fr 250px;
         grid-template-rows: 80px 1fr;
       }
 
+      nav,
+      menu,
+      section,
+      aside,
+      main {
+        padding-top: 24px;
+      }
+
       nav {
         background-color: #343a40;
+        color: #fff;
         grid-row: 1 / -1;
       }
 
