--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -71,6 +71,8 @@
         background-color: #e9ecef;
         padding: 40px;
 
+        overflow: scroll;
+
         display: flex;
         flex-direction: column;
         gap: 40px;
