--- a/06-Components/06-app-layout.html
+++ b/06-Components/06-app-layout.html
@@ -99,7 +99,7 @@
     <menu>
       <button>New</button>
       <button>Reply</button>
-      <button>Forvard</button>
+      <button>Forward</button>
       <button>Mark unread</button>
       <button>Trash</button>
     </menu>
