--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -23,8 +23,8 @@
             needs. We have delivered 250,000+ meals last year!
           </p>
 
-          <a href="#" class="btn">Start eating well</a>
-          <a href="#" class="btn">Learn more &darr;</a>
+          <a href="#" class="btn bnt-ful margin-right-sm">Start eating well</a>
+          <a href="#" class="btn bnt-outline">Learn more &darr;</a>
         </div>
 
         <div class="hero-img-box">
