--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -35,7 +35,7 @@
             <a href="#" class="main-nav-link"> Section 4</a>
           </li>
           <li>
-            <a href="#" class="main-nav-link"> Section 5</a>
+            <a href="#" class="main-nav-link nav-cta"> Section 5</a>
           </li>
         </ul>
       </nav>
