--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -84,6 +84,15 @@
           </div>
         </div>
       </section>
+
+      <section class="section-how grid container">
+        <div>Test 1</div>
+        <div>Test 2</div>
+        <div>Test 3</div>
+        <div>Test 4</div>
+        <div>Test 5</div>
+        <div>Test 6</div>
+      </section>
     </main>
   </body>
 </html>
