--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -258,7 +258,38 @@
             </div>
           </div>
 
-          <div class="list">List of diets</div>
+          <div class="diets">
+            List of diets
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Vegetarian
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Vegan
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Pescatarian
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Gluten-free
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Lactose-free
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Keto
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Paleo
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Low FODMAP
+              </li>
+              <li class="list-item">
+                <ion-icon name="checkmark-outline"></ion-icon> Kid-friendly
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
