--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -307,7 +307,20 @@
       </section>
 
       <section class="section-testimonials grid grid--2--cols">
-        <div class="testimonials">Testimonials</div>
+        <div class="testimonials">
+          <figure class="testimonial">
+            <img
+              class="testimonial-img"
+              src="img/customers/dave.jpg"
+              alt="Photo of customer Dave Bryson"
+            />
+
+            <blockquote class="testimonial-text">
+              Inexpensive, healthy and great-tasting meals, without even having
+              to order manually! It feels truly magical. (Dave Bryson)
+            </blockquote>
+          </figure>
+        </div>
         <div class="gallery">Gallery</div>
       </section>
     </main>
