--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -427,7 +427,7 @@
         </div>
 
         <div class="container grid grid--2--cols">
-          <div class="pricing-plan">
+          <div class="pricing-plan pricing-plan--starter">
             <header class="plan-header">
               <p class="plan-name">Starter</p>
               <p class="plan-price"><span>$</span> 399</p>
@@ -441,12 +441,16 @@
 
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
-                ><span>Order times are between 11am and 9pm</span>
+                ><span>Order times from 11am to 9pm</span>
               </li>
 
               <li class="list-item">
                 <ion-icon class="list-icon" name="checkmark-outline"></ion-icon
                 ><span>Delivery is free</span>
+              </li>
+
+              <li class="list-item">
+                <ion-icon class="list-icon" name="close-outline"></ion-icon>
               </li>
             </ul>
 
