--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -609,6 +609,18 @@
           <p class="copyright">
             Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
           </p>
+
+          <ul class="social-links">
+            <li>
+              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+            </li>
+            <li>
+              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+            </li>
+            <li>
+              <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+            </li>
+          </ul>
         </div>
 
         <div class="address-col">
