--- a/07-Omnifood-Desktop/index.html
+++ b/07-Omnifood-Desktop/index.html
@@ -606,22 +606,28 @@
           <a href="#" class="footer-logo">
             <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
           </a>
-          <p class="copyright">
-            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
-          </p>
 
           <ul class="social-links">
             <li>
-              <a href="#"><ion-icon name="logo-instagram"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-instagram"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href="#"><ion-icon name="logo-facebook"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-facebook"></ion-icon
+              ></a>
             </li>
             <li>
-              <a href="#"><ion-icon name="logo-twitter"></ion-icon></a>
+              <a class="footer-link" href="#"
+                ><ion-icon class="social-icon" name="logo-twitter"></ion-icon
+              ></a>
             </li>
           </ul>
-          class="footer-link"
+
+          <p class="copyright">
+            Copyright &copy; 2027 by Omnifood, Inc. All rights reserved.
+          </p>
         </div>
 
         <div class="address-col">
