--- a/08-Omnifood-Responsive/index.html
+++ b/08-Omnifood-Responsive/index.html
@@ -30,7 +30,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="Omnifood logo" class="logo" />
       </a>
