--- a/09-Omnifood-Optimizations/index.html
+++ b/09-Omnifood-Optimizations/index.html
@@ -111,7 +111,7 @@
 
           <div class="hero-img-box">
             <img
-              src="img/hero.png"
+              src="img/hero-resized.png"
               alt="Woman enjoying food, meals in storage container and food bowls on a table"
               class="hero-img"
             />
